--- a/public/html/about.html
+++ b/public/html/about.html
@@ -11,7 +11,21 @@
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
 </head>
 <body>
-{{>header}}
+<div class="i_nav">
+    <div class="maiDiv">
+        <h1 class="logo" title="韧草工坊" alt="韧草工坊"> </h1>
+        <ul class="nav">
+            <li><a href="index.html" title="">首页</a></li>
+            <li class="curr"><a href="about.html"  title="关于我们">关于我们</a></li>
+            <li><a href="products.html"  title="产品系列">产品系列</a></li>
+            <li><a href="news.html"  title="新闻动态">新闻动态</a></li>
+            <li><a href="design.html"  title="设计团队">设计团队</a></li>
+            <li><a href="http://shop112987712.taobao.com"  title="淘宝购买" target="_blank">淘宝购买</a></li>
+            <li><a href="shop.html" title="实体店铺">实体店铺</a></li>
+        </ul>
+        <div class="clearBoth"> </div>
+    </div>
+</div>
 <!--menu-->
 <div class="maiDiv banner">
     <h2>手工是对时间的尊重与敬畏</h2>
@@ -44,6 +58,7 @@
     <div class="clearBoth"> </div>
 </div>
 
-{{>footer}}
+<div class="footer">CopyRight 2015 rencaogf.com , All Rights Reserved 韧草工坊 版权所有. 沪ICP-15025906备 </div>
+<div class="twm"> </div>
 </body>
 </html>
