--- a/public/html/shop.html
+++ b/public/html/shop.html
@@ -11,7 +11,21 @@
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
 </head>
 <body>
-{{>header}}
+<div class="i_nav">
+    <div class="maiDiv">
+        <h1 class="logo" title="韧草工坊" alt="韧草工坊"> </h1>
+        <ul class="nav">
+            <li><a href="index.html" title="">首页</a></li>
+            <li><a href="about.html"  title="关于我们">关于我们</a></li>
+            <li><a href="products.html"  title="产品系列">产品系列</a></li>
+            <li><a href="news.html"  title="新闻动态">新闻动态</a></li>
+            <li><a href="design.html"  title="设计团队">设计团队</a></li>
+            <li><a href="http://shop112987712.taobao.com"  title="淘宝购买" target="_blank">淘宝购买</a></li>
+            <li class="curr"><a href="shop.html" title="实体店铺">实体店铺</a></li>
+        </ul>
+        <div class="clearBoth"> </div>
+    </div>
+</div>
 <!--menu-->
 <div class="maiDiv banner">
     <h2>手工是对时间的尊重与敬畏</h2>
@@ -20,30 +34,23 @@
 
 <div class="maiDiv white_block">
     <div class="sub_title">
-        <span>ABOUT US</span>
-        <h2><span>关于我们</span></h2>
+        <span>shop Address</span>
+        <h2><span>实体店铺</span></h2>
     </div>
 
-    <div class="about_content">
-        手艺人是指以手工技能或其他技艺为业的人
-        <br/>
-        大机器生产时代之下,曾经的手艺人慢慢地被社会遗忘
-        <br/>
-        此平台通过传播手艺人的故事<br/>
-        希望可唤起人们对手工艺的重新思考<br/><br/>
-        手工制作，专用麻蜡手缝线缝制，传统手工上油封边，厚实的皮料手工上线一般不会有开线问题，这样的皮具使用时间越长越有复古和怀旧感，会越用越光滑，越用越好看，轻微的划痕、擦痕、虻伤、折痕、皮色不均等也会自然消失。
-        <br/><br/>
-        纯粹的手工爱好也是最惬意的：添置工具材料，利用闲暇时间根据自己的心情喜好设计制作，完工后或欣赏或分赠好友，既自得其乐又得好友若干嘉许，生活情趣跃然皮艺之中。
-        <br/><br/><br/><br/>
+    <div class="pro_Detail">
+
         【联系电话】:155-0216-1687 贾先生<br/>
         【邮箱地址】:821999224@qq.com<br/>
         【实体店铺】:上海市虹口区曲阳路566号曲阳购物生活广场三楼（中庭）
+
     </div>
 
 
     <div class="clearBoth"> </div>
 </div>
 
-{{>footer}}
+<div class="footer">CopyRight 2015 rencaogf.com , All Rights Reserved 韧草工坊 版权所有. 沪ICP-15025906备 </div>
+<div class="twm"> </div>
 </body>
 </html>
